OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Rules_Engine__c/Onboarding_Status_Rules_Engine__c.object-meta.xml
<CustomObject>
    <description>Configurable Rules Engine that evaluates the status of an onboarding record.</description>
    <label>Onboarding Status Rules Engine</label>
    <nameField>
        <label>Onboarding Status Rules Engine Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding Status Rules Engines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>