OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Rules_Engine__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables or disables this rules engine for evaluation.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>