OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Rules_Engine__c/fields/Effective_End__c.field-meta.xml
<CustomField>
    <fullName>Effective_End__c</fullName>
    <description>Effective date/time when this rules engine stops being active.</description>
    <label>Effective End</label>
    <type>DateTime</type>
</CustomField>