OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Rules_Engine__c/fields/Effective_Start__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start__c</fullName>
    <description>Effective date/time when this rules engine becomes active.</description>
    <label>Effective Start</label>
    <type>DateTime</type>
</CustomField>