OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Rules_Engine__c/fields/Evaluation_Logic__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Logic__c</fullName>
    <description>Controls aggregation</description>
    <label>Evaluation Logic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
                <default>true</default>
                <label>ALL</label>
            </value>
            <value>
                <fullName>ANY</fullName>
            </value>
            <value>
                <fullName>CUSTOM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>