OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Rules_Engine__c/fields/Override_Status__c.field-meta.xml
<CustomField>
    <fullName>Override_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If populated, forces onboarding status to this value when the engine evaluates as true.</description>
    <label>Override Status</label>
    <type>Checkbox</type>
</CustomField>