OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Rules_Engine__c/fields/Previous_Version__c.field-meta.xml
<CustomField>
    <fullName>Previous_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the prior version of this rules engine (for version chains).</description>
    <label>Previous Version</label>
    <referenceTo>Onboarding_Status_Rules_Engine__c</referenceTo>
    <relationshipLabel>Onboarding Status Rules Engines</relationshipLabel>
    <relationshipName>Previous_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>