OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Rules_Engine__c/fields/Required_Status__c.field-meta.xml
<CustomField>
    <fullName>Required_Status__c</fullName>
    <description>Status value that must already be set before this engine is evaluated or applied.</description>
    <label>Required Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Onboarding_Status_Picklist</valueSetName>
    </valueSet>
</CustomField>