OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Rules_Engine__c/fields/Target_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Target_Onboarding_Status__c</fullName>
    <description>Status value to set on the onboarding when the engine conditions are satisfied.</description>
    <label>Target Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Onboarding_Status_Picklist</valueSetName>
    </valueSet>
</CustomField>