OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Rules_Engine__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Version identifier for this rules engine.</description>
    <label>Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>