OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Rules_Engine__c/validationRules/Custom_Evaluation_Logic.validationRule-meta.xml
<ValidationRule>
    <fullName>Custom_Evaluation_Logic</fullName>
    <active>true</active>
    <description>Forces Evaluation Logic Field to be completed when &quot;Custom&quot; is selected</description>
    <errorConditionFormula>OR(
    AND(
        ISPICKVAL(Evaluation_Logic__c, &apos;CUSTOM&apos;),
        ISBLANK(Custom_Evaluation_Logic__c)
    ),
    AND(
        NOT(ISPICKVAL(Evaluation_Logic__c, &apos;CUSTOM&apos;)),
        NOT(ISBLANK(Custom_Evaluation_Logic__c))
    )
)</errorConditionFormula>
    <errorDisplayField>Custom_Evaluation_Logic__c</errorDisplayField>
    <errorMessage>Custom Evaluation Logic must have their evaluation logic filled out.</errorMessage>
</ValidationRule>